# Musasabi-OS

./: .gitignore  README.md  final_output.py  main_app.py  package-lock.json  package.json  spec.md  tsconfig.base.json
.github/workflows/: ai-pipeline.yml  beta-build.yml  chatgpt-directive-check.yml  ci.yml  decision-needed.yml  handoff-status.yml
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/sales-workspace/: README.md  avatar.html  index.html  package.json  tsconfig.json  vite.config.ts
config/: README.md
docs/: AI_EMPLOYEE_BIBLE.md  ARCHITECTURE.md  COMPANY_GENOME.md  DEVELOPMENT_BIBLE.md  ORGANIZATION_BIBLE.md  PLUGIN_SDK_BIBLE.md  SECURITY_BIBLE.md  STAGING_DEPLOYMENT.md  WINDOWS_VERIFICATION_CHECKLIST.md  ai-core-engine-v1.md  brand-guideline.md
docs/ai-governance/: Development_Bible.md  Japanese_Log_Policy.md
docs/ai-handoff/: ADVANCED_MODULES_ROADMAP.md  AI_AUDIT_AND_RISK_GOVERNANCE.md  AI_BUSINESS_FACTORY_DIRECTIVE.md  AI_EXECUTIVE_GOVERNANCE.md  AI_MODEL_REGISTRY_DIRECTIVE.md  AI_ORGANIZATION_STRUCTURE.md  AI_SECRETARY_RIGHT_DETAIL_PANEL_DIRECTIVE.md  AI_SECRET_CENTER_AND_SECRET_VAULT_DIRECTIVE.md  (+27 more)
novel/: 00_序章.md  01_第一章.md  02_第二章.md  02b_幕間_夏の商店街.md  03_夏の終わりに.md  04_第四章.md  05_第五章.md  05b_幕間_硝子の檻.md  06_第六章.md  07_終章.md  README.md  用語集.md
plugins/: README.md
scripts/: README.md  generate-beta-icon.js  generate-brand-assets.py  generate-icon-from-source.py
tests/: README.md
(+177 files in other folders)
