[package]
name = "musasabi-desktop"
version = "0.1.0"
description = "Musasabi OS desktop shell (Tauri)"
authors = ["Musasabi OS"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "musasabi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
# ローカルLLM(Ollama)/ローカルSTT(whisper)プロキシ用。localhost への http のみ(TLS不要)
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
base64 = "0.22"
# Secret Center(OS資格情報ストアへの暗号化保管)+メール送信(SMTP・STARTTLS)
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls-tls"] }
